--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to Debian Server
 on:
   push:
     branches:
-      - master  # or your default branch name
+      - rewrite  # or your default branch name
 
 env:
   PROD: true
